<resources>
    <string name="app_name">Trakabum</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btnSearch">Buscar</string>
    <string name="lblSearchingHeading">Busqueda Albumes</string>
    <string name="txtAlbumNameHint">Escriba el nombre del album</string>
    <string name="lblAppNameHeading">Trakabum</string>
    <string name="lblAppDescription">Album Tracker \n Organize your Music</string>
    <string name="btnSpotifyLoginAct">Spotify Login</string>
    <string name="btnOfflineLoginAct">Offline Mode</string>
</resources>