<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waves"
    android:theme="@style/Theme.Macchiato"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogoLoginAct"
        android:layout_width="362dp"
        android:layout_height="560dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/lblAppNameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAppNameHeading"
        android:textSize="60sp"
        android:theme="@style/Theme.Macchiato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblAppDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAppDescription"
        android:textSize="20sp"
        android:theme="@style/Theme.Macchiato"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgLogoLoginAct" />

    <Button
        android:id="@+id/btnSpotifyLoginAct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnSpotifyLoginAct"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/macchiato_green"
        android:textSize="20sp"
        android:textColor="@color/macchiato_black_100"/>

    <Button
        android:id="@+id/btnOfflineLoginAct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnOfflineLoginAct"
        android:textAlignment="center"
        android:background="@drawable/button_border_settings"
        app:layout_constraintBottom_toTopOf="@+id/btnSpotifyLoginAct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>